--- a/My Project/Resources.resx
+++ b/My Project/Resources.resx
@@ -119,6 +119,18 @@
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="silicon_labs" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Silicon_Labs_2015.svg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Resources\silicon_labs.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ts_logo_color" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ts_logo_color.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ts_logo_color_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ts_logo_color_icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ts_logo_no_background" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ts_logo_no_background.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ts_logo_no_background_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ts_logo_no_background_icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
